# Endocrinology_Scenario-Based_MCQs_Models

./: README.md  models_hf.md  pyproject.toml
evaluation/answering/datasets/: Endo_Test - without_answer.xlsx  Endo_Test.csv
evaluation/answering/results/: Endo_Test_with_correct_AND_ChatGP_answers.xlsx  model_accuracy.csv
evaluation/answering/scripts/: core.py  eval_gemma_gguf.py  eval_gemma_hf.py  eval_gptoss_gguf.py  eval_gptoss_hf.py  models_list.txt
evaluation/generating/chatGPT_to_eval_mcqgen/: chatgpt_items_with_model.csv  chatgpt_judge_results.jsonl  chatgpt_models_summary.csv  chatgpt_prompt.DOCX  judge_items_strict_pass.jsonl  judge_key_strict_pass.csv  merge_judge_with_key.py  missing_topics_by_model.py  missing_topics_by_model_long.csv  missing_topics_by_model_wide.csv  prepare_strict_pass_items.py
evaluation/generating/gen_script/: gemma_gguf_models.json  gemma_models.json  gptoss20_gguf_models.json  run_gemma_gguf_mcqgen_all.py  run_gemma_mcqgen_all.py  run_gptoss20_gguf_mcqgen_all.py  run_gptoss20_mcqgen_lora.py  run_gptoss20_mcqgen_merged.py  topics.csv
evaluation/generating/generated_mcqs/: mcqgen_all.csv
finetuning/datasets/: Generate_Scenario_Endo.xlsx  QA_General_Endo.xlsx  QA_Scenario_Endo.xlsx
finetuning/scripts/: train-12b-gemma3.py  train-1b-gemma3.py  train-20b-gptoss.py  train-270m-gemma3.py  train-27b-gemma3.py  train-4b-gemma3.py
gguf/: README_GGUF.md
merging/: merge-12b-gemma3.py  merge-1b-gemma3.py  merge-20b-gptoss.py  merge-270m-gemma3.py  merge-27b-gemma3.py  merge-4b-gemma3.py  tokenizer_notes.txt
