[project]
name = "llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "torch>=2.8.0",
    "triton>=3.4.0",
    "numpy",
    "pillow",
    "torchvision",
    "bitsandbytes",
    "transformers==4.56.2",
    "trl==0.22.2",
    "tokenizers",
    "datasets",
    "pandas",
    "openpyxl",
    "unsloth-zoo[base] @ git+https://github.com/unslothai/unsloth-zoo",
    "unsloth[base] @ git+https://github.com/unslothai/unsloth",
    "tqdm>=4.67.1",
    "accelerate>=1.12.0",
    "peft>=0.18.0",
    "safetensors>=0.7.0",
    "sentencepiece>=0.2.1",
    "pip>=25.3",
    "llama-cpp-python>=0.3.16",
    "huggingface-hub[cli]>=0.36.0",
    "scipy",
]
